# audion

./: .gitignore  Cargo.toml  README.md  add_license.py
.github/workflows/: nightly.yml
assets/: logo.af  logo.af~lock~
docs/: AGENTS.md  LANGUAGE.md  ROADMAP.md  SYSTEM_INFORMATION.md
examples/: 00_basics.au  new_ugens_demo.au  readme.au
examples/doc_lang_features/: default_and_named_args.au  midi_arpeggiator_example.au  midi_bpm_sync_example.au  midi_listen_example.au  net.au  recursion.au  sqlite.au  threads_shared_resources.au
examples/language_features/: ableton_link.au  arrays.au  assert.au  binary_io.au  conversions.au  date_time.au  dmx.au  error_handling.au  eval_hash.au  file_io.au  literals.au  math.au  math_more.au  midi.au  midi_file_playback.au  midi_write_example.au  ml.au  ml_kalman.au  objects.au  os_env.au  osc.au  osc2.au  patterns_observer.au  send_reply_example.au  streaming_io.au  strings.au  syntax_sugar.au  threads.au
examples/lib/: drums1.au  functions.au
src/: ast.rs  builtins.rs  clock.rs  define_cache.rs  dmx.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  math.rs  melodies.rs  midi.rs  ml.rs  osc.rs  osc_protocol.rs  parser.rs  repl.rs  sampler.rs  sclang.rs  sequences.rs  spec.rs  sqlite.rs  strings.rs  synthdef.rs  token.rs  value.rs
tests/: test_bit_os_eval_console.rs  test_builtins.rs  test_bytes.rs  test_dmx.rs  test_file_io.rs  test_interpreter.rs  test_lexer.rs  test_math.rs  test_melodies.rs  test_ml.rs  test_parser.rs  test_sampler.rs  test_sequences.rs  test_sqlite.rs  test_synthdef.rs
(+70 files in other folders)
